author - book restapi

--- a/relearn/src/main/resources/application.properties
+++ b/relearn/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=relearn
+# Comment out the configuration below if we don't want to start a Tomcat server
+#spring.main.web-application-type=none
+server.port=8080
+
+# Testing
+#pizza.sauce=BBQ
+#pizza.topping=chicken
+#pizza.crust=stuffed
+
+# H2 in-memory
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+
+# localhost postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/relearn
+spring.datasource.username=postgres
+spring.datasource.password=comeandgetme
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Use Hibernate to create the Schema
+spring.jpa.hibernate.ddl-auto=update
+
+# Use this to initiate the SQL schema (if not use Hibernate)
+#spring.sql.init.mode=always
