--- a/relearn/src/main/resources/application.properties
+++ b/relearn/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Use this to initiate the SQL schema (if not use Hibernate)
 #spring.sql.init.mode=always
+
+spring.security.user.name=dat.phung
+spring.security.user.password=thepassword
